--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pretty": "prettier --write '**/*.{html,js}' && stylelint --fix '**/*.scss'",
     "start": "concurrently \"npm:watch\" \"npm:serve\""
   },
-  "author": "Pavel Torbeev",
+  "author": "Egor Anders",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.2",
